# ThunderMittens

./: reference_kernel_porting_status.md
ThunderMittens.xcodeproj/: project.pbxproj
ThunderMittens/include/common/: atomics.metal  base_ops.metal  common.metal  rng.metal
ThunderMittens/include/ops/: ops.metal
ThunderMittens/include/ops/group/: scan.metal
ThunderMittens/include/ops/warp/register/tile/: conversions.metal  dequant.metal  dequant_tables.metal  maps.metal  mma.metal
ThunderMittens/include/ops/warp/register/vec/: maps.metal  reductions.metal
ThunderMittens/include/ops/warp/shared/tile/: maps.metal
ThunderMittens/include/ops/warp/shared/vec/: maps.metal
ThunderMittens/kernels/: CMakeLists.txt  bindings.cpp  time_perf.py  tk_launch.h
ThunderMittens/kernels/add_norm/: add_norm.cpp  add_norm.h  add_norm.metal
ThunderMittens/kernels/add_norm/correctness/: test_add_norm.py
ThunderMittens/kernels/add_rt/: add_rt.h
ThunderMittens/kernels/attn_bwd/: attn_bwd.h  attn_bwd.metal
ThunderMittens/kernels/attn_causal/: attn_causal.cpp  attn_causal.h  attn_causal.metal
ThunderMittens/kernels/attn_causal/correctness/: test_attn_window.py
ThunderMittens/kernels/attn_fwd/: attn_fwd.h  attn_fwd.metal
ThunderMittens/kernels/attn_multiwarp/: attn_multiwarp.cpp  attn_multiwarp.h  attn_multiwarp.metal
ThunderMittens/kernels/attn_multiwarp/correctness/: test_attn_multiwarp.py
ThunderMittens/kernels/attn_q/: attn_q.cpp  attn_q.h  attn_q.metal
ThunderMittens/kernels/attn_q/correctness/: test_attn_q.py
ThunderMittens/kernels/attn_varlen/: attn_varlen.cpp  attn_varlen.h  attn_varlen.metal
ThunderMittens/kernels/attn_varlen/correctness/: test_attn_varlen.py
ThunderMittens/kernels/based/: based.cpp  based.h  based.metal
ThunderMittens/kernels/based/correctness/: test_based.py
ThunderMittens/kernels/cmplx_matmul/: cmplx_matmul.cpp  cmplx_matmul.h  cmplx_matmul.metal
ThunderMittens/kernels/cmplx_matmul/correctness/: test_cmplx_matmul.py
ThunderMittens/kernels/cross_entropy/: cross_entropy.cpp  cross_entropy.h  cross_entropy.metal
ThunderMittens/kernels/cross_entropy/correctness/: test_cross_entropy.py
ThunderMittens/kernels/fftconv/: fftconv.cpp  fftconv.h  fftconv.metal
ThunderMittens/kernels/fftconv/correctness/: test_fftconv.py
ThunderMittens/kernels/flux/: flux.cpp  flux.h  flux.metal
ThunderMittens/kernels/flux/correctness/: test_flux.py
ThunderMittens/kernels/gemm_staged/: gemm_staged.cpp  gemm_staged.h  gemm_staged.metal
ThunderMittens/kernels/gemm_staged/correctness/: test_gemm_staged.py
ThunderMittens/kernels/glu/: glu.cpp  glu.h  glu.metal
ThunderMittens/kernels/glu/correctness/: test_glu.py
ThunderMittens/kernels/hadamard/: hadamard.cpp  hadamard.h  hadamard.metal
ThunderMittens/kernels/hadamard/correctness/: test_hadamard.py
ThunderMittens/kernels/hedgehog/: hedgehog.h
ThunderMittens/kernels/hedgehog/correctness/: test_hedgehog.py
ThunderMittens/kernels/kv_cache/: kv_cache.cpp  kv_cache.h  kv_cache.metal
ThunderMittens/kernels/kv_cache/correctness/: test_kv_cache.py
ThunderMittens/kernels/layernorm/: layernorm.h
ThunderMittens/kernels/lin_attn_causal/: lin_attn_causal.cpp  lin_attn_causal.h  lin_attn_causal.metal
ThunderMittens/kernels/lin_attn_decay/: lin_attn_decay.cpp  lin_attn_decay.h
ThunderMittens/kernels/linear_attn/: linear_attn.cpp  linear_attn.h  linear_attn.metal
ThunderMittens/kernels/linear_attn/correctness/: test_linear_attn.py
ThunderMittens/kernels/lm_head/: lm_head.cpp  lm_head.h  lm_head.metal
ThunderMittens/kernels/lm_head/correctness/: test_lm_head.py
ThunderMittens/kernels/mamba2/: mamba2.cpp  mamba2.h  mamba2.metal
ThunderMittens/kernels/matmul_custom/: matmul_custom.h
ThunderMittens/kernels/mla/: mla.cpp  mla.h  mla.metal
ThunderMittens/kernels/mla/correctness/: test_mla.py
ThunderMittens/kernels/moe/: moe.cpp  moe.h  moe.metal
ThunderMittens/kernels/moe/correctness/: test_moe.py
ThunderMittens/kernels/paged_attn_v2/: paged_attn_v2.cpp  paged_attn_v2.h  paged_attn_v2.metal
ThunderMittens/kernels/paged_attn_v2/correctness/: test_paged_attn_v2.py
ThunderMittens/kernels/qflux/: qflux.cpp  qflux.h  qflux.metal
ThunderMittens/kernels/qgemm/: qgemm.cpp  qgemm.h  qgemm.metal
ThunderMittens/kernels/qgemm/correctness/: test_actorder.py  test_fp8_scaled.py  test_qgemm.py  test_wa8.py
ThunderMittens/kernels/qgemm_int/: qgemm_int.cpp  qgemm_int.h  qgemm_int.metal
ThunderMittens/kernels/qgemm_int/correctness/: test_qgemm_int.py
ThunderMittens/kernels/qgemv/: qgemv.cpp  qgemv.h  qgemv.metal
ThunderMittens/kernels/qgemv/correctness/: test_qgemv.py
ThunderMittens/kernels/qgemv_int/: qgemv_int.cpp  qgemv_int.h  qgemv_int.metal
ThunderMittens/kernels/qgemv_int/correctness/: test_qgemv_int.py
ThunderMittens/kernels/quant_rt/: quant_rt.cpp  quant_rt.h  quant_rt.metal
ThunderMittens/kernels/quant_rt/correctness/: test_quant_rt.py
ThunderMittens/kernels/rms_norm/: rms_norm.cpp  rms_norm.h  rms_norm.metal
ThunderMittens/kernels/rms_norm/correctness/: test_rms_norm.py
ThunderMittens/kernels/rope_kv/: rope_kv.cpp  rope_kv.h  rope_kv.metal
ThunderMittens/kernels/rope_kv/correctness/: test_rope_kv.py
ThunderMittens/kernels/rotary/: rotary.cpp  rotary.h  rotary.metal
ThunderMittens/kernels/rotary/correctness/: test_rotary.py
ThunderMittens/kernels/sampling/: sampling.cpp  sampling.h  sampling.metal
ThunderMittens/kernels/sampling/correctness/: test_sampling.py
ThunderMittens/kernels/softmax/: softmax.cpp  softmax.h  softmax.metal
ThunderMittens/kernels/softmax/correctness/: test_softmax.py
ThunderMittens/kernels/tests_parity/: test_parity.py
ThunderMittens/kernels/tk/: __init__.py  quant.py  quant_tables.py
ThunderMittens/kernels/tk/tests/: test_encoders.py
ThunderMittens/kernels/tk_torch/: __init__.py  torch_kernels.mm
ThunderMittens/kernels/tk_torch/tests/: test_mps.py
docs/: perf.md
docs/porting/: marlin-quant.md  primitives.md  thunderkittens.md
perf/: bench_kernels.py  optimization_status.md
(+2 files in other folders)
